fix: Align 'Save All Products' button to bottom right in product modal

--- a/style.css
+++ b/style.css
@@ -272,7 +272,8 @@ footer {
 
 .modal-actions {
   margin-top: 20px;
-  text-align: right;
+  display: flex;
+  justify-content: flex-end;
 }
 
 #save-all-products-btn {
